--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "predis/predis": "~1.0",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "1.9.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
